--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: 100vh;
     background: radial-gradient(circle at top, #3d004a, #1c001f);
-    animation: fadeIn 0.6s ease-in-out;
+    /* animation: fadeIn 0.6s ease-in-out; */
     flex-direction: column;
 }
 
