--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,79 @@
-
-.buttonoutline
-{
+.buttonoutline, .buttonfill {
     background-color: transparent;
-    padding: 10px 15px;
+    height: 40px; /* Ensuring the same size */
+    width: 40px;  /* Ensuring the same size */
     border: 1px solid #fff3;
+    position: relative;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    flex-shrink: 0; /* Prevents shrinking */
 }
-.buttonoutline:hover
+
+.buttonfill
 {
+    width: auto;
+    padding: 0px 20px;
+    font-size: 14px;
+    background-color: #9300D7;
+}
+
+.buttonoutline:hover {
     background-color: #fff1;
     transition: background-color 0.2s;
+}
+
+.buttonoutline img {
+    width: 60%;
+    height: 60%; 
+    object-fit: contain;
+    filter: invert(1); 
+}
+
+.buttonoutline img, .buttonoutline i
+{
+    opacity: 0.7;
+}
+
+.header {
+    padding: 15px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.logo {
+    font-size: 40px;
+    margin-right: 25px;
+}
+
+.nav {
+    flex-grow: 1;
+}
+
+.headerText {
+    font-size: 20px;
+}
+
+.headerText .bold {
+    font-weight: 600;
+}
+
+.right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+    width: 100%;
+    
 }
