--- a/src/components/LandingHeader/LandingHeader.css
+++ b/src/components/LandingHeader/LandingHeader.css
@@ -23,7 +23,7 @@
     display: flex;
     align-items: center;
     /* justify-content: space-between; */
-    padding: 10px 0px;
+    padding: 0px 0px;
 }
 
 .nav
@@ -39,6 +39,7 @@
     color: white;
     margin-right: 30px;
     text-shadow: 0px 0px 20px #fffa;
+    margin-left: 10px;
 }
 
 .nav ul {
