--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     height: calc( 100vh - 120px);
     box-sizing: border-box;
-    width: 250px;
+    min-width: 200px;
     position: fixed;
     /* top: 0; */
     left: 0;
@@ -16,21 +16,26 @@
     backdrop-filter: blur(10px);
     border: 1px solid #fff1;
     box-shadow: 0px 0px 25px #fff1;
-    margin-top: 100px;
+    margin-top: 90px;
     top: 0;
+    transition: transform 0.4s cubic-bezier(.69,-0.22,.39,1.18);
 }
 
 .sidebar-btn
 {
     display: flex;
     justify-content: flex-start;
-    padding: 5px;
-    margin: 5px;
+    padding: 4px 10px;
+    margin: 3px;
     align-items: center;
     border-radius: 10px; 
     border:1px solid #fff0;
     transition: 0.2s;
     cursor: pointer;
+    color: white;
+    opacity: 0.9;
+    font-weight: 400;
+    font-size: 14px;
 }
 .sidebar-btn:hover:not(.selected)
 {
@@ -51,9 +56,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 9px;
+    margin-right: 13px;
     border-radius: 5px;
-    padding: 8px;
+    padding: 8px 0px;
+    opacity: 0.5;
 }
 
 .sidebar-btn.selected span
@@ -61,3 +67,21 @@
     /* background-color: #fff1;    
     border:1px solid #fff2; */
 }
+
+  
+  .sidebar-closed {
+    transform: translateX(-120%);
+  }
+  
+  .sidebar-open {
+    transform: translateX(0);
+  }
+  
+  .main-container {
+    display: flex;
+  }
+  
+  .content-shifted {
+    margin-left: 250px;
+    transition: margin-left 0.3s ease-in-out;
+  }
