--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,5 @@
 .buttonoutline, .buttonfill {
     background-color: transparent;
-    height: 40px; /* Ensuring the same size */
     width: 40px;  /* Ensuring the same size */
     border: 1px solid #fff3;
     position: relative;
@@ -12,12 +11,22 @@
     flex-shrink: 0; /* Prevents shrinking */
 }
 
+.header [class *= "button"] {
+    height: 40px;
+}
+
 .buttonfill
 {
     width: auto;
     padding: 0px 20px;
     font-size: 14px;
     background-color: #9300D7;
+    transition: box-shadow 0.2s;
+    /* box-shadow: 0px 0px 10px #9300D7; */
+    border: none;
+}
+.buttonfill:hover {
+    box-shadow: 0px 0px 10px #9300D755;
 }
 
 .buttonoutline:hover {
