--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -47,12 +47,23 @@
 }
 
 .header {
+    width: 100%;
+    padding: 1rem 2rem;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
     padding: 15px;
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 80px;
+    background: #1c001f;
+    position:fixed;
+    border-bottom: 1px solid #fff2;
 }
 
 .header-container {
@@ -132,7 +143,7 @@ function ProfileDropdown()
   position: absolute;
   top: 50px;
   right: 0;
-  background: #fff2;
+  background: #fff1;
   backdrop-filter: blur(5px);
   border-radius: 8px;
   padding: 10px;
@@ -185,7 +196,7 @@ function ProfileDropdown()
 
 /* 🔹 Hover Effect for Dropdown Options */
 .profile-dropdown-option:hover {
-  background-color: #fff3;
+  background-color: #fff2;
 }
 
 /* 🔹 Dropdown Links */
