--- a/src/components/LandingHeader/LandingHeader.css
+++ b/src/components/LandingHeader/LandingHeader.css
@@ -5,7 +5,7 @@
     font-family: 'Inter', sans-serif;
 }
 
-.header {
+.landingheader {
     width: 100%;
     padding: 1rem 2rem;
     background: transparent;
