--- a/src/pages/Project/Project.css
+++ b/src/pages/Project/Project.css
@@ -598,7 +598,7 @@
 }
 
 .empty-project-notice {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
