--- a/src/components/ALSView/ALSView.css
+++ b/src/components/ALSView/ALSView.css
@@ -121,20 +121,26 @@
 
 .timeline-scroll-container {
   overflow-x: auto;
+  scrollbar-width: 0px;
+  scrollbar-color: rgba(255, 255, 255, 0) rgba(255, 255, 255, 0.0);
   position: relative;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  padding: 5px 0;
-  margin-left: 200px; /* Align with track headers */
+  padding: 0px 0;
+  margin-left: 200px;
+  box-sizing: border-box;
 }
 
 .timeline {
-  height: 30px;
+  height: 45px;
   position: relative;
   display: flex;
   align-items: flex-end;
-  min-width: 100%;
-  box-sizing: content-box;
-  padding-bottom: 10px;
+  box-sizing: border-box;
+  padding-bottom: 5px;
+  /* padding-left: 200px; */
+  margin-left: 200px;
+  width: calc(100% - 200px);
+  z-index: 5;
 }
 
 .timeline-marker {
@@ -173,6 +179,7 @@
   z-index: 10;
   pointer-events: none;
   padding-bottom: 20px;
+  height: 100vh;
 }
 
 .playhead::after {
